--- a/Web/index.html
+++ b/Web/index.html
@@ -23,24 +23,23 @@
 </header>
 
 <article>
-  <div class="filtro">
-    <p class="filtrar">FILTRAR:</p>
-  	<ul>
-  		<a href="#"><li style="margin-left:0px">Listas</li></a>
-  		<a href="#"><li>Artículos</li></a>
-  		<a href="#"><li>Películas</li></a>
-  		<a href="#"><li>Series</li></a>
-  		<a href="#"><li><img src="img/cruz.png"></li></a>
-  	</ul>
-  </div>
-
+	<div class="filtro">
+		<p class="filtrar">FILTRAR:</p>
+		<ul>
+			<a href="#"><li style="margin-left:0px">Listas</li></a>
+			<a href="#"><li>Artículos</li></a>
+			<a href="#"><li>Películas</li></a>
+			<a href="#"><li>Series</li></a>
+			<a href="#"><li><img src="img/cruz.png"></li></a>
+		</ul>
+	</div>
   <div class="feed">
 
   	<div class="contenedorGrande">
-  		<div class="etiquetaGrande"></div>
+  		<div class="etiquetaGrande"><a href="#">Películas</a></div>
   	    <div class="postGrande">
   	    	<img src="img/post/post1.png">
-  	    	<div lang="es" class="tituloGrande"><h1>10 Tarantino movies ordered from worst to bestr</h1></div>
+  	    	<div lang="es" class="tituloGrande"><a href="#">10 Peliculas de 2017 que tiene potencial para ser de culto</a></div>
   	    </div>
     </div>
 
