--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,26 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    @font-face
+    {
+      font-family: "MontserratB";
+      src: url("assets/css/fonts/Montserrat-Bold.ttf");
+      
+    }
+
+    body {
+      font-family: "MontserratB";
+      width: 72%;
+      margin: 0 auto;
+      font-size: 16px;
+    }
+    @media screen and (max-width: 1800px) {
+      body {
+        font-size: 11px;
+      }
+    }
+  </style>
 </head>
 <body>
   
